--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "ORAM-SMST"
+name = "oram_smst"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 ark-ec = "0.5.0"
 ark-ff = "0.5.0"
+ark-serialize = "0.4.2"
 ark-std = "0.5.0"
 mina-curves = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 mina-hasher = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
