--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ mina-curves = { git = "https://github.com/o1-labs/proof-systems", version = "0.1
 mina-hasher = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 num-bigint = "0.4.6"
 o1-utils = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
+thiserror = "2.0.11"
 wasm-bindgen = "0.2.100"
