--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,8 @@ mina-curves = { git = "https://github.com/o1-labs/proof-systems", version = "0.1
 mina-hasher = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 num-bigint = "0.4.6"
 o1-utils = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.135"
+serde_with = "3.12.0"
 thiserror = "2.0.11"
 wasm-bindgen = "0.2.100"
