--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,14 @@ ark-ec = "0.5.0"
 ark-ff = "0.5.0"
 ark-serialize = "0.4.2"
 ark-std = "0.5.0"
+clap = "4.5.27"
 hkdf = "0.12.4"
+log = "0.4.25"
 mina-curves = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 mina-hasher = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 num-bigint = "0.4.6"
 o1-utils = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
+rand = "0.9.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 serde_with = "3.12.0"
