feat: adds deserialization api for circuits

--- a/circuits/packages/circuits/tsconfig.json
+++ b/circuits/packages/circuits/tsconfig.json
@@ -4,7 +4,8 @@
         "node_modules/jest-expect-message/types/index.d.ts"
     ],
     "include": [
-        "./src/**/*"
+        "./src/**/*",
+        "./test/**/*"
     ],
     "exclude": [
         "jest.config.cjs"
