--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ ark-ff = "0.5.0"
 ark-serialize = "0.4.2"
 ark-std = "0.5.0"
 clap = "4.5.27"
+hex = "0.4.3"
 hkdf = "0.12.4"
 log = "0.4.25"
 mina-curves = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
