--- a/circuits/packages/circuits/package.json
+++ b/circuits/packages/circuits/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*"
+    "@repo/typescript-config": "workspace:*",
+    "@types/node": "^22.12.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
