--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ark-ec = "0.5.0"
-ark-ff = "0.5.0"
+ark-ec = "0.4.2"
+ark-ff = "0.4.2"
 ark-serialize = "0.4.2"
 ark-std = "0.5.0"
 clap = "4.5.27"
-hex = "0.4.3"
+hex = { version = "0.4.3", features = ["serde"] }
 hkdf = "0.12.4"
 log = "0.4.25"
 mina-curves = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 mina-hasher = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
+mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 num-bigint = "0.4.6"
 o1-utils = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 rand = "0.9.0"
