--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ ark-ff = "0.4.2"
 ark-serialize = "0.4.2"
 ark-std = "0.5.0"
 clap = "4.5.27"
+dashmap = "6.1.0"
 hex = { version = "0.4.3", features = ["serde"] }
 hkdf = "0.12.4"
 log = "0.4.25"
@@ -18,6 +19,8 @@ mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", version = "0
 num-bigint = "0.4.6"
 o1-utils = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 rand = "0.9.0"
+rayon = "1.10.0"
+rocksdb = "0.23.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 serde_with = "3.12.0"
