--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ mina-hasher = { git = "https://github.com/o1-labs/proof-systems", version = "0.1
 mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 num-bigint = "0.4.6"
 o1-utils = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
+prost = "0.13.4"
 rand = "0.9.0"
 rayon = "1.10.0"
 rocksdb = "0.23.0"
@@ -26,4 +27,7 @@ serde_json = "1.0.135"
 serde_with = "3.12.0"
 sha2 = "0.10.8"
 thiserror = "2.0.11"
+tokio = { version = "1.43.0", features = ["macros"] }
+tonic = "0.12.3"
+tonic-build = "0.12.3"
 wasm-bindgen = "0.2.100"
