--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ csv = "1.3.1"
 dashmap = "6.1.0"
 hex = { version = "0.4.3", features = ["serde"] }
 hkdf = "0.12.4"
+kimchi = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 mina-curves = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 mina-hasher = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
 mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
